# streamlit_superapp

./: .gitignore  LICENSE  README.md  pyproject.toml
streamlit_superapp/: __init__.py  components.py  index.py  navigation.py  page.py  page_loader.py  sidebar.py  state.py  typing.py  widgets.py
streamlit_superapp/web/breadcrumbs/: .env  package-lock.json
streamlit_superapp/web/breadcrumbs/public/: index.html
streamlit_superapp/web/breadcrumbs/src/: Breadcrumbs.tsx  index.tsx
streamlit_superapp/web/page_index/: package.json
streamlit_superapp/web/page_index/src/: Card.tsx  Grid.tsx  index.tsx
