[project]
name = "streamlit-superapp"
version = "1.0.4"
description = ""
authors = [{ name = "Wilian", email = "wilianzilv@gmail.com" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.urls]
Repository = "https://github.com/WilianZilv/streamlit_superapp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["streamlit>=1.28.1"]

[tool.hatch.metadata]
allow-direct-references = true
